<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/terminal_header">

        <EditTextPreference
            app:defaultValue="@string/signature_default"
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="host"
            app:title="@string/host_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/placeholder_default"
            app:entries="@array/placeholder_entries"
            app:entryValues="@array/placeholder_values"
            app:key="placeholder"
            app:title="@string/placeholder_title"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>